tests/vendor/valid/trivial/nested_unops.c
//expect 2
//tags: trivial, unary
int main() {
    return ~-3;
}