tests/vendor/invalid/semantics/prefix_decr_non_lvalue.c
//tags: simple, decrement
int main() {
    return --3;
}